app/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: eks-ns
spec:
  ingressClassName: nginx
  rules:
    - host: healthcare.in
      http:
        paths:
          - path: /appointments
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 80

          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 80
